--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,14 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile 'net.java.dev.jna:jna:4.5.0'
     compile 'net.java.dev.jna:jna-platform:4.5.0'
+    testCompile 'org.mockito:mockito-core:2.7.22'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
