--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'net.java.dev.jna:jna-platform:4.5.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     testCompile 'org.mockito:mockito-core:2.7.22'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
