--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.freddyt_studio.remotekey_desktop'
 version '0.1'
 
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+    ext.kotlin_version = '1.1.61'
 
     repositories {
         mavenCentral()
