--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,24 @@ buildscript {
     ext.kotlin_version = '1.1.61'
 
     repositories {
+        mavenLocal()
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'javafx-gradle-plugin'
 
 sourceCompatibility = 1.8
+
+// Remove the icons and sicons directory from the JAR, because they will
+// be included outside the jar
+sourceSets.main.resources.excludes = ["/icons", "/sicons"]
 
 repositories {
     mavenCentral()
@@ -69,3 +76,18 @@ task updateRemoteConnectDependency() {
         }
     }
 }
+
+// configure javafx-gradle-plugin
+// for all available settings please look at the class "JavaFXGradlePluginExtension"
+jfx {
+    verbose = true
+    mainClass = "app.MainApp"
+    vendor = "Rocket Guys"
+    updateExistingJar = true
+    additionalAppResources = "/src/main/resources/"
+    copyAdditionalAppResourcesToJar = true
+}
+
+// Uncomment these to include the resources in the jar
+//sourceSets.main.resources.srcDirs = [ "src/main/resources/" ]
+//sourceSets.main.resources.includes = ["**/*"]
