Updated icons and name

--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ task updateRemoteConnectDependency() {
 jfx {
     verbose = true
     mainClass = "app.MainApp"
-    appName = "dokey"
+    appName = "Dokey"
     vendor = "Rocket Guys"
     updateExistingJar = true
     additionalAppResources = "src/main/resources/"
