--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ sourceCompatibility = 1.8
 
 // Remove the icons and sicons directory from the JAR, because they will
 // be included outside the jar
-sourceSets.main.resources.excludes = ["/icons", "/sicons", "/sysicons"]
+sourceSets.main.resources.excludes = ["/icons", "/sicons", "/sysicons", "/webicons"]
 
 repositories {
     mavenCentral()
