--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ import org.apache.commons.lang3.SystemUtils
 import java.nio.file.StandardCopyOption
 
 group 'com.freddyt_studio.remotekey_desktop'
-version '0.1'
-int version_number = 1
+version '0.1'  // Human readable version
+int version_number = 1  // An integer that must be incremented at each release
 
 buildscript {
     ext.kotlin_version = '1.1.61'
