--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ import java.nio.file.StandardCopyOption
 group 'com.freddyt_studio.remotekey_desktop'
 version '0.2'  // Human readable version
 int version_number = 2  // An integer that must be incremented at each release
+int minimum_mobile_version = 2 // Minimum dokey mobile version that this Desktop support
 
 buildscript {
     ext.kotlin_version = '1.1.61'
@@ -116,6 +117,7 @@ task('produceProjInfo') {
     Properties properties = new Properties();
     properties.put("version", project.version)
     properties.put("vnumber", String.valueOf(version_number))
+    properties.put("minimum_mobile_version", String.valueOf(minimum_mobile_version))
     properties.store(new FileOutputStream(propertiesFile), null)
 }
 
