--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ sourceCompatibility = 1.8
 
 // Remove the image directories from the JAR, because they will
 // be included outside the jar
-sourceSets.main.resources.excludes = ["/icons", "/sicons", "/sysicons", "/webicons", "/win"]
+sourceSets.main.resources.excludes = ["/sicons", "/sysicons", "/webicons", "/win"]
 
 repositories {
     mavenCentral()
