--- a/build.gradle
+++ b/build.gradle
@@ -45,9 +45,8 @@ dependencies {
     compile 'net.java.dev.jna:jna:4.5.0'
     compile 'net.java.dev.jna:jna-platform:4.5.0'
     compile 'org.jsoup:jsoup:1.11.2'
-    compile 'com.github.tulskiy:jkeymaster:1.2'  // TODO add license
-    compile 'com.udojava:EvalEx:2.0'  // TODO: add license notification
-                                      // TODO also license to https://github.com/shannah/Java-Objective-C-Bridge
+    compile 'com.github.tulskiy:jkeymaster:1.2'
+    compile 'com.udojava:EvalEx:2.0'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     compile "io.reactivex.rxjava2:rxjava:2.1.9"
