--- a/src/main/resources/proj.properties
+++ b/src/main/resources/proj.properties
@@ -1,4 +1,4 @@
-#Fri Mar 23 20:59:09 CET 2018
-version=0.5
+#Wed Mar 28 18:06:11 CEST 2018
+version=0.5.1
 minimum_mobile_version=2
-vnumber=6
+vnumber=7
