--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'org.jsoup:jsoup:1.11.2'
     compile 'com.github.tulskiy:jkeymaster:1.2'
     compile 'com.udojava:EvalEx:2.0'
+    compile 'org.reflections:reflections:0.9.11'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     compile "io.reactivex.rxjava2:rxjava:2.1.9"
