Delete useless files

--- a/src/main/resources/commands/apps.json
+++ b/src/main/resources/commands/apps.json
@@ -6,5 +6,9 @@
   {
     "appName": "idea64.exe",
     "file": "idea.json"
+  },
+  {
+    "appName": "sublime_text.exe",
+    "file": "sublime_text.json"
   }
 ]
