--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.github.tulskiy:jkeymaster:1.2'
     compile 'com.udojava:EvalEx:2.0'
     compile 'org.reflections:reflections:0.9.11'
+    compile group: 'com.google.zxing', name: 'core', version: '3.3.3'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     compile "io.reactivex.rxjava2:rxjava:2.1.9"
