--- a/build.gradle
+++ b/build.gradle
@@ -16,17 +16,18 @@ buildscript {
     repositories {
         mavenLocal()
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
-        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
     }
 }
 
+apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
 apply plugin: 'kotlin'
-apply plugin: 'javafx-gradle-plugin'
 
 sourceCompatibility = 1.8
 
@@ -105,24 +106,33 @@ task('copyAdditionalFilesNative', type: Sync) {
     }
     into additionalFilesBuildDir
 }
-jfxNative.dependsOn copyAdditionalFilesNative
-jfxRun.dependsOn copyAdditionalFilesNative
 
-// configure javafx-gradle-plugin
-// for all available settings please look at the class "JavaFXGradlePluginExtension"
-jfx {
-    verbose = true
-    mainClass = "app.MainLauncher"
-
-    appName = "Dokey"
-    vendor = "Dokey"
-    nativeReleaseVersion = project.version.toString()
-    identifier = "com.rocketguys.dokey"
-
-    updateExistingJar = true
-    additionalAppResources = additionalFilesBuildDir.toAbsolutePath().toString()
-    copyAdditionalAppResourcesToJar = true
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'app.MainLauncher'
+        )
+    }
 }
+
+//jfxNative.dependsOn copyAdditionalFilesNative
+//jfxRun.dependsOn copyAdditionalFilesNative
+//
+//// configure javafx-gradle-plugin
+//// for all available settings please look at the class "JavaFXGradlePluginExtension"
+//jfx {
+//    verbose = true
+//    mainClass = "app.MainLauncher"
+//
+//    appName = "Dokey"
+//    vendor = "Dokey"
+//    nativeReleaseVersion = project.version.toString()
+//    identifier = "com.rocketguys.dokey"
+//
+//    updateExistingJar = true
+//    additionalAppResources = additionalFilesBuildDir.toAbsolutePath().toString()
+//    copyAdditionalAppResourcesToJar = true
+//}
 
 // Uncomment these to include the resources in the jar
 //sourceSets.main.resources.srcDirs = [ "src/main/resources/" ]
